--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- profile page -->
             <div class="book-page page-left">
                 <div class="profile-page">
-                    <img src="/images/Salman_pic1.jpeg" alt="">
+                    <img src="images/Salman_pic1.jpeg" alt="">
                     <h1>Salman Jamil</h1>
                     <h3>IT Support Engineer</h3>
 
@@ -222,7 +222,7 @@
 
                     <div class="portfolio-box">
                         <div class="img-box">
-                            <img src="/images/portfolio.jpg" alt="">
+                            <img src="images/portfolio.jpg" alt="">
                         </div>
 
                         <div class="info-box">
